--- a/PROJECT1/CSS/main.css
+++ b/PROJECT1/CSS/main.css
@@ -7,7 +7,15 @@ h1 {
   text-align: center;
   margin-top: -10px;
 }
-p {
+p.intro {
+  font-family: avenir;
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
+  color: #D8DCE6;
+  margin-top: -70px;
+}
+p.description {
   font-family: avenir;
   text-align: center;
   font-size: 20px;
@@ -21,13 +29,42 @@ ul {
   font-weight: bold;
   text-align: left;
   position: relative;
-  left: 40%  
+  left: 36%;
+    list-style: none;
+    outline: none;
+    border: none;
 }
-img {
+img.me {
   height: 200px;
   width: 200px; 
   display: block;
   margin: auto;
+}
+img.book {
+  height: 200px;
+  width: 200px; 
+    margin-bottom: 70px;
+align-content: center;
+    align-items: center;
+    margin-right: 30px;
+}
+img.japanese {
+    height: 200px;
+    width:200px;
+    display:block;
+    margin:auto;
+}
+img.italian {
+    height:200px;
+    width:200px;
+    display:block;
+    margin:auto;
+}
+img.mexican {
+    height:200px;
+    width:200px;
+    display:block;
+    margin:auto;
 }
 a {
   color: #CEE4EB;
